# prep-checker

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object_entry_window.h  object_entry_window.ui  pic_checker.pro  prep.h  preps.xml  resources.xsd  test_meta_window.cpp  test_meta_window.h  test_meta_window.ui  test_viewer_window.cpp  test_viewer_window.h  test_viewer_window.ui  tests_window.cpp  tests_window.h  testswindow.cpp  testswindow.h  testswindow.ui  testviewerwindow.cpp  testviewerwindow.h  testviewerwindow.ui  todo.md  xml_parser_handler.h  xml_schema_validator.h
forms/: mainwindow.ui  test_meta_window.ui  tests_window.ui
src/: main.cpp  mainwindow.cpp  mainwindow.h  object_entry_window.cpp  object_entry_window.h  prep.h  test_meta_window.h  tests_window.cpp  xml_parser_handler.h  xml_schema_validator.h
tests/hystology/: histology.xml
